# Abstract-VM

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  conanfile.txt  main.cpp
Grammar/: AVMGrammar.y  AVMLexer.h  AVMLexer.l  AVMLexer.ll.cpp  AVMParser.yy.c  AVMParser.yy.cpp  AVMParser.yy.hpp  CMakeLists.txt  Makefile  grammar.cmake
Operands/: CMakeLists.txt  FactoryOperand.cpp  FactoryOperand.h  ODouble.cpp  ODouble.h  OFloat.cpp  OFloat.h  OInt16.cpp  OInt16.h  OInt32.cpp  OInt32.h  OInt8.cpp  OInt8.h  Operand.cpp  Operand.h  Operand.hpp  OperatorTemplates.hpp
Operands/IOperand/: IOperand.cpp  IOperand.h
Scripts/: Hello.avm  script1.avm  script3.avm  script4.avm  sctipt2.avm
Service/: AVM.h  ExecuteFile.cpp  GetUsage.cpp  ParseContext.cpp
StackMachine/: CMakeLists.txt  StackMachine.cpp  StackMachine.h
StackMachine/Exceptions/: AVMException.cpp  AVMException.h  CMakeLists.txt
StackMachine/Instruction/: CMakeLists.txt  Instruction.cpp  Instruction.h
Tests/: 07_sub_types_hard.avm  checklist_test1.avm  checklist_test2.avm  checklist_test3.avm  checklist_test4.avm  checklist_test5.avm  checklist_test6.avm  checklist_test7.avm  checklist_test8.avm
UnitTests/: UnitTests.hpp
